--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,7 @@ Changelog
 0.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Catch all exceptions when loading settings and exit
 
 
 0.3 (2018-12-14)
